--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"type": "git",
 		"url": "git@github.com:neumann-tokyo/auto_negotiator.git"
 	},
-	"keywords": ["Auto Negotiation"],
+	"keywords": [
+		"Auto Negotiation"
+	],
 	"author": "kbaba1001",
 	"license": "MIT License",
 	"bugs": {
@@ -29,5 +31,8 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.4.1",
 		"lefthook": "^1.5.5"
+	},
+	"dependencies": {
+		"@preact/signals-core": "^1.5.1"
 	}
 }
