--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
 		"pnpm": ">=8.0.0"
 	},
 	"scripts": {
-		"dev": "node src/client.js",
-		"test:all": "NODE_ENV=test node --test test/**/*.test.js",
+		"dev": "ts-node src/client.ts",
+		"build": "rm -rf ./dist && mkdir -p dist && tsc",
+		"test:all": "NODE_ENV=test node --loader tsx --test test/*.test.ts",
 		"test": "NODE_ENV=test node --test",
-		"check": "biome check --apply ./src",
+		"check": "biome check --apply ./src ./sample",
+		"repl": "tsx",
 		"postinstall": "lefthook install"
 	},
 	"repository": {
@@ -29,6 +31,9 @@
 	"homepage": "https://github.com/neumann-tokyo/auto_negotiator#readme",
 	"devDependencies": {
 		"@biomejs/biome": "1.4.1",
-		"lefthook": "^1.5.5"
+		"@types/node": "^20.11.5",
+		"lefthook": "^1.5.5",
+		"tsx": "^4.7.0",
+		"typescript": "^5.3.3"
 	}
 }
