--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
 		"esModuleInterop": true,
 	},
 	"include": [".", "./src/", "./sample/"],
-	"exclude": ["./dist"]
+	"exclude": ["./dist/", "./test/"]
 }
