--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,19 @@
 {
 	"compilerOptions": {
-		"moduleResolution": "node",
-		"target": "ES2022",
+		"moduleResolution": "NodeNext",
+		"module": "NodeNext",
+		"verbatimModuleSyntax": true,
+		"isolatedModules": true,
+		"target": "ESNext",
+		"declaration": true,
 		"outDir": "./dist",
 		"strict": true,
 		"noImplicitAny": true,
-		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"allowSyntheticDefaultImports": true,
+		"allowJs": true,
+		"checkJs": true
 	},
-	"include": [".", "./src/", "./sample/"],
+	"include": ["./src/"],
 	"exclude": ["./dist/", "./test/"]
 }
